# dummy_project_1

./: .gitignore  LICENCE  README.md  pyproject.toml
.github/workflows/: ci_pipeline.yml
src/example_package_fidev/: example.py
src/example_package_fidev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_example.py
