[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "example_package_fidev"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "flake8",
    "flake8-pyproject",
    "black"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist"
]
extend-ignore = ["E203"]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyw?$'